Fixade text wrapping issue på studiebevakning

--- a/styles/contents.css
+++ b/styles/contents.css
@@ -121,3 +121,7 @@ ol {
   font-size: 1.1rem;
   text-align: center;
 }
+
+.headerText {
+  text-wrap: pretty;
+}
